--- a/src/ui/styles/folder-view.css
+++ b/src/ui/styles/folder-view.css
@@ -44,22 +44,36 @@
   border: 1px solid rgba(255, 255, 255, 0.02);
 }
 
+
 .is-mobile .explorer-folder-card {
-  max-width: 140px;
-  background: var(--explorer-glass-background);
-  border: var(--explorer-border-glass);
-  box-shadow: var(--explorer-shadow-glass);
-  border-radius: 16px;
-  padding: 1.15em 0.2em;
+    padding: 1.15em 0.2em;
+    border-radius: 16px;
+    max-width: 140px;
+    box-shadow: none;
 }
 
-.theme-dark.is-mobile .explorer-folder-card,
+.theme-dark.is-mobile .explorer-folder-card {
+  background-color: var(--background-primary-alt);
+
+}
+
+
+
+.theme-dark.is-mobile .explorer-container:not(.use-glass) .explorer-folder-card {
+  /* border: 1px solid var(--background-secondary-alt); */
+  background-color: var(--background-primary-alt);
+
+
+}
+
+.theme-dark.is-mobile .use-glass .explorer-folder-card,
 .is-mobile .theme-dark .explorer-folder-card {
-  /* background-color: rgba(255, 255, 255, 0.05); */
-  /* border: 1px solid rgba(255, 255, 255, 0.06); */
+  background-color: rgba(255, 255, 255, 0.05);
+  border: 1px solid rgba(255, 255, 255, 0.06);
   box-shadow:
     0 2px 2px rgba(0, 0, 0, 0.08),
-    inset 0 0.5px 0 0 rgba(255, 255, 255, 0.06);
+    inset 0 0.5px 0 0 rgba(255, 255, 255, 0.08),
+    inset 0 -0.5px 0 0 rgba(255, 255, 255, 0.1);
 }
 
 .explorer-folder-card:hover,
