--- a/styles.css
+++ b/styles.css
@@ -125,6 +125,9 @@
   align-self: stretch;
   flex-shrink: 0;
 }
+.is-mobile .explorer-separator {
+  margin: .2em var(--explorer-space-5);
+}
 .explorer-divider {
   display: block;
   width: 100%;
@@ -220,16 +223,25 @@
   border: 1px solid rgba(255, 255, 255, 0.02);
 }
 .is-mobile .explorer-folder-card {
-  max-width: 140px;
-  background: var(--explorer-glass-background);
-  border: var(--explorer-border-glass);
-  box-shadow: var(--explorer-shadow-glass);
-  border-radius: 16px;
   padding: 1.15em 0.2em;
+  border-radius: 16px;
+  max-width: 140px;
+  box-shadow: none;
 }
-.theme-dark.is-mobile .explorer-folder-card,
+.theme-dark.is-mobile .explorer-folder-card {
+  background-color: var(--background-primary-alt);
+}
+.theme-dark.is-mobile .explorer-container:not(.use-glass) .explorer-folder-card {
+  background-color: var(--background-primary-alt);
+}
+.theme-dark.is-mobile .use-glass .explorer-folder-card,
 .is-mobile .theme-dark .explorer-folder-card {
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.08), inset 0 0.5px 0 0 rgba(255, 255, 255, 0.06);
+  background-color: rgba(255, 255, 255, 0.05);
+  border: 1px solid rgba(255, 255, 255, 0.06);
+  box-shadow:
+    0 2px 2px rgba(0, 0, 0, 0.08),
+    inset 0 0.5px 0 0 rgba(255, 255, 255, 0.08),
+    inset 0 -0.5px 0 0 rgba(255, 255, 255, 0.1);
 }
 .explorer-folder-card:hover,
 .explorer-folder-card:focus-within {
@@ -262,9 +274,11 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
   gap: var(--explorer-space-3);
+  margin-top: .25em;
 }
 .is-mobile .explorer-cards-grid {
   grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+  margin-top: unset;
 }
 .explorer-card {
   padding: var(--explorer-space-2);
@@ -574,6 +588,8 @@
 #explorer-actions {
   direction: ltr;
 }
+.action-item {
+}
 .explorer-actions-start,
 .explorer-actions-controls,
 .explorer-actions-end {
@@ -598,7 +614,7 @@
   border-radius: var(--explorer-radius-md);
 }
 .is-mobile .explorer-container:not(.use-glass) .action-item {
-  color: var(--text-normal);
+  color: var(--text-muted);
 }
 .explorer-container:not(.use-glass) .action-item:hover,
 .explorer-container:not(.use-glass) .action-item:focus-visible {
